[Coordinated Graphics] '-webkit-mask-image: -webkit-gradient' doesn't work for AC layer. https://bugs.webkit.org/show_bug.cgi?id=125326

Patch by YongGeol Jung <yg48.jung@samsung.com> on 2014-10-20
Reviewed by Gyuyoung Kim.

Mask layer hasn't requested to synchronize with AC layer in CoordinatedGraphics so far.
That's why the mask layer isn't shown under CoordinatedGraphics.
Thus this patch lets the mask layer synchronize with the AC layer whenever AC layer is updated.

Below layout test case is related to this issue when --pixel test is enabled.
Unfortunately EFL WebKitTestRunner doesn't support AC mode yet.
When EFL test framework supports AC mode, the test will be passed.

Test: compositing/masks/mask-of-clipped-layer.html

* platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.cpp:
(WebCore::CoordinatedGraphicsLayer::syncPendingStateChangesIncludingSubLayers):

Canonical link: https://commits.webkit.org/155773@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174924 268f45cc-cd09-0410-ab3c-d52691b4dbfc