Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.cpp
@@ -799,6 +799,9 @@ void CoordinatedGraphicsLayer::syncPendingStateChangesIncludingSubLayers()
         resetLayerState();
     }
 
+    if (maskLayer())
+        toCoordinatedGraphicsLayer(maskLayer())->syncPendingStateChangesIncludingSubLayers();
+
     for (size_t i = 0; i < children().size(); ++i)
         toCoordinatedGraphicsLayer(children()[i])->syncPendingStateChangesIncludingSubLayers();
 }
